@@ -1,19 +1,30 @@
 package render;
 
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.ArrayList;
 
 // Variable Refresh rate
 public class VRR {
 	public static long currentTime;
-	public static Deque<Long> listOfTimes = new ArrayDeque<Long>();
+	public static ArrayList<Long> listOfTimes = new ArrayList<Long>();
+	public static ArrayList<Long> deltaX = new ArrayList<Long>();
 	
 	public static void ping() {
 		currentTime = (long) System.currentTimeMillis();
-		listOfTimes.push(currentTime);
-		System.out.println(listOfTimes);
-		if(listOfTimes.size() >= 5) {
-			listOfTimes.removeLast();
+		listOfTimes.add(0, currentTime);
+		if(listOfTimes.size() > 6) {
+			listOfTimes.remove((listOfTimes.size() - 1));
 		}
+		if(listOfTimes.size() < 2) {
+			listOfTimes.add(currentTime);
+		}
+		deltaX.clear();
+		for(int i = 1 ; i < (listOfTimes.size()); i++){
+			long x1 = listOfTimes.get((i));
+			long x2 = listOfTimes.get((i - 1));
+			long delta = x2 - x1;
+			deltaX.add(delta);
+		}
+		System.out.println(listOfTimes);
+		System.out.println(deltaX);
 	}
 }
